logo udate and many more chenges

--- a/public/index.html
+++ b/public/index.html
@@ -23,15 +23,15 @@
       <div class="nav--list">
         <a href="lobby.html">
           <h3 id="logo">
-            <img src="./images/logo1.png" alt="Site Logo" />
-            <span>TEA_SEA</span>
+            <img src="./images/lg1.jpg" alt="Site Logo" />
+            <span>G13</span>
           </h3>
         </a>
       </div>
 
       <div id="nav__links">
         <a class="nav__link" href="/">
-          Lobby
+          Login
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
