--- a/public/room.html
+++ b/public/room.html
@@ -106,8 +106,8 @@
             </button>
             <a href="lobby.html">
                 <h3 id="logo">
-                    <img src="./images/logo2.png" alt="Site Logo">
-                    <span>TEA_SEA</span>
+                    <img src="./images/lg1.jpg" alt="">
+                    <span>G13</span>
                 </h3>
             </a>
        </div>
